--- a/adoc/TRD-rancher-trilio-aws-getting-started.adoc
+++ b/adoc/TRD-rancher-trilio-aws-getting-started.adoc
@@ -31,28 +31,26 @@ backup software and provides a more natural way to work with modern data.
 TrilioVault offers a variety of compelling features that make it a natural partner for a SUSE Rancher agile data platform.  
 These include:
 
-Flexible Data Model:: MongoDB’s dynamic schema is ideal for handling changing requirements and continuous delivery.  
-You can seamlessly roll out new features without having to update existing records — a process that can take weeks for traditional, 
-relational databases.  DevOps teams can quickly model data against an ever-changing environment and roll these changes into production. 
-This results in faster time to market and faster time to value.
+Data Protection:
+Based on Trilio's backup and recovery technology, point-in-time backups and restores can be created for cloud-native applications protecting them from data corruption or other malicious activity on production data.
+Ransomware claimed nearly ~$40K in Q3 2019, and organizations had data unavailable for an average of 12.1 days amongst other direct and indirect losses. Point-in-time data protection is a key solution to help protect data from Ransomware outages.
 
-Resilience:: MongoDB’s replica sets have built-in redundancy, providing greater resilience and enhancing disaster recovery capabilities.  
-Administrators can even isolate operational workloads from analytical reporting in single database cluster to ensure sufficient 
-resources are allocated to handle demand.
+Disaster Recovery:
+Based on Trilio's backup and recovery technology, point-in-time backups and restores can be created for cloud-native applications protecting them from data corruption or other malicious activity on production data. The same backup and recovery technology can be leveraged in case of outages at the primary site to restore an entire environment to a separate location, fulfilling Disaster Recovery.
+TrilioVault backups are application aware and includes all artifacts that define the application. These include persistent data, Pod definitions, config maps, secrets, and other items. It recovers the entire application allowing you to achieve the most optimal RTO possible. 
 
-Monitoring and Automation::  Heterogeneous services increase the level of complexity and can stall productivity. 
-Technology that handles monitoring and automation is critical to keeping DevOps teams productive as their environments evolve. 
-MongoDB Ops Manager features visualization, custom dashboards, and automated alerting.  It tracks, reports, processes, 
-and visualizes 100+ key database and systems-health metrics, including operations counters, CPU utilization, replication status, 
-and node status.
+Migration:
+You may need to migrate applications from one cloud platform to another or one Kubernetes cluster to a different Kubernetes cluster. Most businesses and compliance initiatives are now mandating IT organizations to have a proven multi-cloud strategy - so that they are not locked to a specific cloud vendor. IT departments are now required to demonstrate their multi-cloud strategy by recovering business applications in multiple clouds. By choosing cloud storage as backup target, TrilioVault can demonstrate an application migration use case.
 
-Scalability:: MongoDB’s auto-sharding automatically partitions and distributes the database across nodes, serving IT infrastructures 
-that require dynamic, high-performance capabilities.  Distribution can even span different geographic regions.  
-MongoDB is ideally suited to scale-out architectures.
+Test and Development:
+Another popular use case is test and development for DevOps. There are a plethora of tools that can help you achieve DevOps, but most of them lack the capability to version control the production data. Exiting DevOp tools can help version control the code and help you streamline processes. However, in some instances you may a need point-in-time of production data for you DevOps processes including identifying performance bottlenecks, troubleshooting data corruption and other issues. TrilioVault can reliably restore a point-in-time of your production application including its associated data for test and development needs.
 
+Ransomware Protection:
+Trilio provides and will continue to innovate its strategy to protect against ransomware attacks. Ransomware protection from Trilio is aligned to the pillars of the NIST and NCCoE cybersecurity frameworks. The pillars are defined as Identify and Protect, Detect and Mitigate, and Recover. Trilio has built (and is building) features to align with these pillars:
 
-With enterprise-grade products, proactive support, and success-focused services and training, SUSE and MongoDB deliver 
-an agile data platform that helps organizations achieve their cloud native goals.
+Identify and Protect - Application discovery, Security Validations Immutable backups, Encryption, Zero-Trust etc.
+Detect and Mitigate - Scanning of Backups, Anomaly Detection, Notifications into Slack/Teams etc.
+Recover - Deep logging, Isolation testing, DR workflows and multiple target types to increase recoverability surface.
 
 
 == Technical overview
